[package]
name = "wc3-ft-proxy"
version = "0.1.0"
authors = ["exellian <gabler.max@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
druid = "0.7.0"
directories = "4.0.1"

[dependencies.winapi]
version = "0.3"
features = ["winuser"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"